Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-8360

[C++][Gandiva] Fixes date32 support for date/time functions

    XMLWordPrintableJSON

Details

    Description

      Gandiva date/time functions like extractYear[1] only work with millisecond, passing date32 to these functions will get wrong results.

      [1]https://github.com/apache/arrow/blob/6d92694d00aec08081ae1bfe06f0a265e141b1b7/cpp/src/gandiva/precompiled/time.cc#L75-L80

      Attachments

        Issue Links

          Activity

            People

              yuanzhou Yuan Zhou
              yuanzhou Yuan Zhou
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 50m
                  50m