ARROW-8360: [C++][Gandiva] Fixes date32 support for date/time functions

Gandiva date/time functions like extractYear only work with
millisecond, passing date32 to these functions will get wrong
results.

This patch adds a new function castDATE_date32 to convert date32
to date64. date/time functions should do a castDATE_date32 first,
e.g.: extractYear(castDATE(date32_days)).

Signed-off-by: Yuan Zhou <yuan.zhou@intel.com>

Closes #6861 from zhouyuan/wip_gandiva_func_date32 and squashes the following commits:

a3019a303 <Yuan Zhou>  Fixes date32 support for date/time functions

Authored-by: Yuan Zhou <yuan.zhou@intel.com>
Signed-off-by: Praveen <praveen@dremio.com>